--- a/index.html
+++ b/index.html
@@ -4,17 +4,26 @@
     <meta name="viewport" content="width=device-width">
     <title></title>
     <style>
+      .full {
+        width: 100%;
+        height: 100%;
+      }
+      
+      div.web-player {
+        background-color: #000;
+      }
       img {
         text-align: center;
       }
     </style>
   </head>
   <body>
-    <div class="web-player" id="player">
-      <div class="win10-load" id="loadpage">
+    <div class="web-player full" id="player">
+      <div class="win10-load full" id="loadpage">
         <br>
-        <img src="src/images/Win10-favicon.ico" width="150" height="150" alt="WIN10">
-        <img src="src/images/load-round.gif" width="80" height="80" alt="loading...">
+        <img src="src/images/Win10-favicon.ico" width="450" height="450" alt="WIN10">
+        <br>
+        <img src="src/images/load-round.gif" width="200" height="2" alt="loading...">
       </div>
     </div>
   </body>
