--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
       div.web-player {
         background-color: #000;
       }
+
+      div.win10-load {
+        background-color: #000;
+        text-align: true;
+      }
       img {
         text-align: center;
       }
